2012-05-20 -- Prerelease (thekraken-0.7-pre9)
-- incorporate novel approach to making FahCores engage
   Dynamic Load Balancing (Stephen Gordon)
-- autorestart DLB triggering method is no longer viable,
   drop it
-- 'np' override has been made obsolete by updates to V7
   client, drop it
-- prevent redundant SIGTERM from being delivered to FahCore
   if it's already shutting down due to SIGINT/Ctrl+C
-- play nicer with shell's job control
-- include more robust parsing of command line and config
   file variables
-- include startcpu configuration variable for advanced users
-- attempt to prevent root from running 'make install' initially


2011-12-04 -- New release (thekraken-0.6)
-- allow The Kraken to operate correctly on remote
   filesystems with inaccurate timekeeping
-- use stat() rather than lstat()
-- minor makefile update
-- documentation update


2011-07-30 -- Prerelease (thekraken-0.6-pre4)
-- The Kraken now sports autorestart feature (aims
   at engaging Dynamic Load Balancing)
-- avoid excessive prompts when operating recursively
-- don't use non-reentrant functions in signal handler
-- Makefile revamp
-- couple cosmetic documentation updates


2010-04-12 -- New release (thekraken-0.4)
-- huge documentation update
-- set default install directory to /usr/bin rather than
   /usr/local/bin which doesn't "work" with sudo
-- configuration file support
-- number-of-threads override feature for six-core machines
   running bigadv WUs (see section 6.3 of the README.txt file)
-- cosmetic code cleanups
-- Makefile: minor tweaks


2010-04-02 -- New release (thekraken-0.3)
-- support V7 client: traverse directory structure
-- support V7 client: preserve file ownership (if run by root)
-- option parsing code is now more civilized (getopt)
-- first release with half-decent documentation


2010-03-15 -- Initial release (thekraken-0.2)