@@ -1,3 +1,7 @@
+2012-05-20 -- Prerelease (thekraken-0.7-pre10)
+-- use dynamic log fd detection w/DLB load
+
+
 2012-05-20 -- Prerelease (thekraken-0.7-pre9)
 -- incorporate novel approach to making FahCores engage
    Dynamic Load Balancing (Stephen Gordon)
